# operating-systems

./: .gitignore  CMakeLists.txt
lab10/: lab10.c
lab11/: lab11.c
lab16/: lab16.c
lab17/: README.md  lab17.c
lab18/: README.md  lab18.c
lab19/: README.md  lab19.c
lab2/: lab2.c
lab20/: README.md  lab20.c
lab21/: lab21.c
lab22/: README.md  lab22.c
lab25/: lab25.c
lab26/: lab26-2.c  lab26.c
lab27/: lab27.c
lab3/: lab3.c
lab30/: lab30-client.c  lab30-server.c
lab31/: lab31-server.c
lab32/: lab32-client.c  lab32-server.c
lab33/: lab33-client.c  lab33-proxy.c  lab33-server.c
lab4/: lab4.c
lab5/: fileGenerator.c  lab5.c
lab6/: lab6.c
lab7/: lab7.c
lab8/: lab8.c
lab9/: lab9.c
